# cursor_demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/architecture/: README.md
project/: database.py  main.py
project/src/: __init__.py  database.py  main.py  models.py
project/src/endpoints/: __init__.py  users.py
tests/src/: test_database.py
