[project]
name = "cursor-demo"
version = "0.1.0"
description = "FastAPI project with SQLModel"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.12.7"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.1",
    "sqlmodel==0.0.16",
    "aiosqlite==0.19.0",
    "python-dotenv==1.0.1",
    "pre-commit==3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.6",
    "ruff==0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"